--- a/src/normalize.css
+++ b/src/normalize.css
@@ -479,3 +479,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+}
